--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,9 @@
 
     <EditText
         android:id="@+id/title"
-        android:layout_width="293dp"
-        android:layout_height="51dp"
+        android:layout_width="367dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Title"
@@ -21,38 +22,36 @@
         android:id="@+id/channel1"
         android:layout_width="339dp"
         android:layout_height="48dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="248dp"
         android:onClick="sendOnChannel1"
         android:text="Send on Channel 1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.296"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/message" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/channelTwoButton"
         android:layout_width="343dp"
         android:layout_height="51dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginBottom="368dp"
+        android:layout_marginTop="364dp"
         android:text="Send on Channel 2"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="sendOnChannel2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/channel1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_width="364dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Name"
+        android:text="Message"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.373"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
